--- a/index.html
+++ b/index.html
@@ -1,4 +1,29 @@
-<h1> Hola amigo</h1>
-<p>
-<a href='pagina.html'> I'm warning don't click me. </a>
-</>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js" crossorigin="anonymous"></script></head>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js" crossorigin="anonymous"></script> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/@mediapipe/holistic/holistic.js" crossorigin="anonymous"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/pose.js" crossorigin="anonymous"></script>
+</head>
+
+  <body>
+  <div class="container">
+    
+    <!-- <button id="get-access">Get access to camera</button> <video autoplay></video> -->
+    
+    <video class="input_video" width="500px" height="500px"></video>
+    <h1>MediaPipe pose of upper body😂😂 in </h1>
+    <!-- <canvas class="output_canvas" width="510px" height="360px"></canvas>
+    <canvas class='output_canvas-2' width="510px" height="360px"></canvas> -->
+    <canvas class="output_canvas-3" width="1920px" height="1080px"></canvas>
+  </div>
+  <!-- <script src="./module.js"></script>
+  <script src="./module2.js"></script> -->
+  <script src="./module3.js"></script>
+</body>
+</html>
