--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
   </div>
   <!-- <script src="./module.js"></script>
   <script src="./module2.js"></script> -->
-<!--   <script src="./module3.js"></script> -->
+  <script src="./module3.js"></script>
 </body>
 </html>
