--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1>MediaPipe pose of upper body😂😂 in </h1>
     <!-- <canvas class="output_canvas" width="510px" height="360px"></canvas>
     <canvas class='output_canvas-2' width="510px" height="360px"></canvas> -->
-    <canvas class="output_canvas-3" width="1920px" height="1080px"></canvas>
+<!--     <canvas class="output_canvas-3" width="1920px" height="1080px"></canvas> -->
   </div>
   <!-- <script src="./module.js"></script>
   <script src="./module2.js"></script> -->
