uncommented button video and canvas

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
   <body>
   <div class="container">
-    
-    <!-- <button id="get-access">Get access to camera</button> <video autoplay></video> -->
+   
+     <button id="get-access">Get access to camera</button> <video autoplay></video> 
     
     <video class="input_video" width="500px" height="500px"></video>
     <h1>MediaPipe pose of upper body😂😂 in </h1>
-    <!-- <canvas class="output_canvas" width="510px" height="360px"></canvas>
-    <canvas class='output_canvas-2' width="510px" height="360px"></canvas> -->
-<!--     <canvas class="output_canvas-3" width="1920px" height="1080px"></canvas> -->
+    <canvas class="output_canvas" width="510px" height="360px"></canvas>
+    <canvas class='output_canvas-2' width="510px" height="360px"></canvas> 
+ <canvas class="output_canvas-3" width="1920px" height="1080px"></canvas> 
   </div>
   <!-- <script src="./module.js"></script>
   <script src="./module2.js"></script> -->
