commented module1.js and module2.js

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <canvas class='output_canvas-2' width="510px" height="360px"></canvas> 
  <canvas class="output_canvas-3" width="1920px" height="1080px"></canvas> 
   </div>
-   <script src="./module.js"></script>
-  <script src="./module2.js"></script> 
+<!--    <script src="./module.js"></script>
+  <script src="./module2.js"></script>  -->
   <script src="./module3.js"></script>
 </body>
 </html>
